# molecule-viewer

./: Cargo.toml  README.md  compt-platform.ui  create-surface.ui  main.py  makefile  wulff.ui
src/: lib.rs  main.rs
tests/files/: CH4.gjf  MFI.gjf
