# [[file:ui.note::*cargo][cargo:1]]
[package]
name = "ui"
version = "0.0.1"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
clap = "3.0.0-beta.1"
cursive = "0.11"

[dev-dependencies]

# [dependencies.cursive]
# version = "0.11"
# default-features = false
# features = ["crossterm-backend"]
# cargo:1 ends here
