# [[file:ui.note::4e30cf79][4e30cf79]]
[package]
name = "ui"
version = "0.0.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
clap = "3.0.0-beta.5"
eframe = "0.15.0" # Gives us egui, epi and web+native backends

[dev-dependencies]

[profile.release]
opt-level = 2 # fast and small wasm
# 4e30cf79 ends here
