# [[file:ui.note::4e30cf79][4e30cf79]]
[package]
name = "ui"
version = "0.0.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
clap = {version="4", features = ["derive"]}
eframe = "0.21.3" # Gives us egui, epi and web+native backends
three-d = "0.14.1"
gchemol = { version = "0.1.3", features=["adhoc"] }
vecfx = {version="0.1", features=["nalgebra"]}

[dev-dependencies]

[profile.release]
opt-level = 2 # fast and small wasm
# 4e30cf79 ends here
